<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/bkgr">

    <ImageView
   	 	android:id="@+id/ivSoundButton"
   		android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignParentRight="true"
       	android:layout_marginRight="9sp"
       	android:layout_marginTop="7sp"
        android:contentDescription="@string/soundButton"
   	    android:src="@drawable/soundon" 
   	    android:clickable="true"/>
    
    <ImageView 
        android:id="@+id/ivHeart1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/heart"
        android:contentDescription="@string/heart"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="5sp"
        />
    
    <ImageView 
        android:id="@+id/ivHeart2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/heart"
        android:contentDescription="@string/heart"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="31sp"
        />
    
    <ImageView 
        android:id="@+id/ivHeart3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/heart"
        android:contentDescription="@string/heart"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="57sp"
        />
    
    <TextView 
        android:id="@+id/tvCurrentScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/currentScore"
        android:layout_marginLeft="130sp"
        android:layout_marginTop="6sp"
        />
    
    <TextView
        android:id="@+id/tvRightAnswersStatic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tvWrongAnswersStatic"
        android:layout_alignRight="@+id/tvWrongAnswersStatic"
        android:layout_marginBottom="21dp"
        android:text="@string/rightAnswersStatic"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tvTotalScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvTotalScoreStatic"
        android:layout_alignBottom="@+id/tvTotalScoreStatic"
        android:layout_alignLeft="@+id/tvWrongAnswers"
        android:text="@string/totalScore"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tvRightAnswers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvRightAnswersStatic"
        android:layout_alignBottom="@+id/tvRightAnswersStatic"
        android:layout_alignLeft="@+id/tvWrongAnswers"
        android:text="@string/rightAnswers"
        android:textColor="@android:color/white" />
    
    <Button
    	    android:id="@+id/bPlayAgain"
    	    android:padding="5sp"
    	    android:layout_width="128sp"
    	    android:layout_height="35sp"
    	    android:layout_marginLeft="20sp"
    	    android:layout_alignParentBottom="true"
    	    android:layout_marginBottom="54dp"
    	    android:background="@drawable/menu_button"
    	    android:text="@string/playAgain" 
    	    android:textColor="@android:color/white"
    	    android:textSize="14sp"/>

    	<Button
    	    android:id="@+id/bToMainMenu"
    	    android:layout_width="128sp"
    	    android:layout_height="35sp"
    	    android:layout_alignTop="@+id/bPlayAgain"
    	    android:layout_marginRight="20sp"
    	    android:layout_alignParentRight="true"
    	    android:background="@drawable/menu_button"
    	    android:padding="5sp"
    	    android:text="@string/toMainMenu" 
    	    android:textColor="@android:color/white"
    	    android:textSize="14sp"/>

    	<TextView
    	    android:id="@+id/tvTotalScoreStatic"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_above="@+id/bPlayAgain"
    	    android:layout_alignRight="@+id/tvWrongAnswersStatic"
    	    android:layout_marginBottom="43dp"
    	    android:text="@string/totalScoreStatic"
    	    android:textColor="@android:color/white" />

    	<TextView
    	    android:id="@+id/tvWrongAnswersStatic"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_above="@+id/tvTotalScoreStatic"
    	    android:layout_alignLeft="@+id/ivBestLogo"
    	    android:layout_marginBottom="18dp"
    	    android:text="@string/wrongAnswersStatic"
    	    android:textColor="@android:color/white" />

    	<TextView
    	    android:id="@+id/tvWrongAnswers"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignBaseline="@+id/tvWrongAnswersStatic"
    	    android:layout_alignBottom="@+id/tvWrongAnswersStatic"
    	    android:layout_alignRight="@+id/tvGameOver"
    	    android:text="@string/wrongAnswers"
    	    android:textColor="@android:color/white" />

    	<ImageView
    	    android:id="@+id/ivBestLogo"
    	    android:layout_width="200sp"
    	    android:layout_height="100sp"
    	    android:layout_above="@+id/tvRightAnswersStatic"
    	    android:layout_centerHorizontal="true"
    	    android:layout_marginBottom="24dp"
    	    android:contentDescription="@string/logokwf"
    	    android:src="@drawable/logokwf" />

    	<TextView
    	    android:id="@+id/tvGameOver"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_above="@+id/ivBestLogo"
    	    android:layout_alignLeft="@+id/tvTotalScoreStatic"
    	    android:layout_marginBottom="19dp"
    	    android:text="@string/gameOver"
    	    android:textColor="@android:color/white"
    	    android:textSize="30sp"
    	    android:textStyle="bold" />

</RelativeLayout>
