<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkgr"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".GameOver" >
    
    <ImageView
   	 	android:id="@+id/ivSoundButton"
   		android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_alignParentRight="true"
       	android:layout_marginRight="9sp"
       	android:layout_marginTop="7sp"
        android:contentDescription="@string/soundButton"
   	    android:src="@drawable/soundon" 
   	    android:clickable="true"/>
    
    <ImageView 
        android:id="@+id/ivHeart1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/heart"
        android:contentDescription="@string/heart"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="5sp"
        />
    
    <ImageView 
        android:id="@+id/ivHeart2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/heart"
        android:contentDescription="@string/heart"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="31sp"
        />
    
    <ImageView 
        android:id="@+id/ivHeart3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/heart"
        android:contentDescription="@string/heart"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="57sp"
        />
    
    <TextView 
        android:id="@+id/tvCurrentScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:text="@string/currentScore"
        android:layout_marginLeft="130sp"
        android:layout_marginTop="6sp"
        />

    	<TextView
    	    android:id="@+id/tvGoodWrong"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_alignLeft="@+id/tvCurrentScore"
    	    android:layout_below="@+id/ivHeart3"
    	    android:layout_marginTop="37dp"
    	    android:text="@string/good"
    	    android:textColor="@android:color/white"
    	    android:textSize="25sp"
    	    android:textStyle="bold" />

    	<ImageView
    	    android:id="@+id/ivResultLogo"
    	    android:layout_width="200sp"
    	    android:layout_height="100sp"
    	    android:layout_below="@+id/tvGoodWrong"
    	    android:layout_centerHorizontal="true"
    	    android:layout_marginTop="15dp"
    	    android:contentDescription="@string/logokwf"
    	    android:src="@drawable/logokwf" />

    	<TextView
    	    android:id="@+id/tvExplanation"
    	    android:layout_width="280sp"
    	    android:layout_height="wrap_content"
    	    android:layout_below="@+id/ivResultLogo"
    	    android:layout_centerHorizontal="true"
    	    android:layout_marginTop="22dp"
    	    android:text="@string/exampleExplanation"
    	    android:textColor="@android:color/white"
    	    android:textSize="16sp" />

    	<ImageView
    	    android:id="@+id/ivFBShare"
    	    android:layout_width="wrap_content"
    	    android:layout_height="35sp"
    	    android:layout_alignLeft="@+id/ivResultLogo"
    	    android:layout_alignParentBottom="true"
    	    android:layout_marginBottom="53dp"
    	    android:contentDescription="@string/fbShare"
    	    android:src="@drawable/facebookshare" 
    	    android:clickable="true"/>

    	<Button
    	    android:id="@+id/bNextLevel"
    	    android:layout_width="135sp"
    	    android:layout_height="35sp"
    	    android:layout_alignTop="@+id/ivFBShare"
    	    android:layout_toRightOf="@+id/tvCurrentScore"
    	    android:background="@drawable/menu_button"
    	    android:padding="5sp"
    	    android:text="@string/nextLevel"
    	    android:textColor="@android:color/white"
    	    android:textSize="14sp" />
    
</RelativeLayout>