<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkgr"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/ivSoundButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="9sp"
        android:layout_marginTop="7sp"
        android:clickable="true"
        android:contentDescription="@string/soundButton"
        android:src="@drawable/soundon" />

    <ImageView
        android:id="@+id/ivHeart1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5sp"
        android:layout_marginTop="5sp"
        android:contentDescription="@string/heart"
        android:src="@drawable/heart" />

    <ImageView
        android:id="@+id/ivHeart2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31sp"
        android:layout_marginTop="5sp"
        android:contentDescription="@string/heart"
        android:src="@drawable/heart" />

    <ImageView
        android:id="@+id/ivHeart3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="57sp"
        android:layout_marginTop="5sp"
        android:contentDescription="@string/heart"
        android:src="@drawable/heart" />

    <TextView
        android:id="@+id/tvCurrentScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="130sp"
        android:layout_marginTop="6sp"
        android:text="@string/currentScore"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/bAnswer1"
        android:layout_width="240sp"
        android:layout_height="35sp"
        android:layout_below="@+id/ivQPicture"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65sp"
        android:background="@drawable/button_menu"
        android:text="@string/a1"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/bAnswer2"
        android:layout_width="240sp"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/bAnswer1"
        android:layout_below="@+id/bAnswer1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_menu"
        android:text="@string/a2"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/bAnswer3"
        android:layout_width="240sp"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/bAnswer2"
        android:layout_below="@+id/bAnswer2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_menu"
        android:text="@string/a3"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <Button
        android:id="@+id/bAnswer4"
        android:layout_width="240sp"
        android:layout_height="35dp"
        android:layout_alignLeft="@+id/bAnswer3"
        android:layout_below="@+id/bAnswer3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:background="@drawable/button_menu"
        android:text="@string/a4"
        android:textColor="@android:color/white"
        android:textSize="14sp" />

    <ImageButton
        android:id="@+id/ImageButton01"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/imageButton1"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/a1"
        android:src="@drawable/ic_launcherq" />

    <ImageButton
        android:id="@+id/ImageButton02"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignTop="@+id/ImageButton01"
        android:layout_toRightOf="@+id/ImageButton01"
        android:contentDescription="@string/a1"
        android:src="@drawable/ic_launcherq" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/ImageButton01"
        android:contentDescription="@string/a1"
        android:src="@drawable/ic_launcherq" />

    <ImageView
        android:id="@+id/ivQPicture"
        android:layout_width="180sp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45sp"
        android:contentDescription="@string/ms1"
        android:src="@drawable/ms1" />

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/ivQPicture"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="@string/question"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white" />

</RelativeLayout>